--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,9 +24,7 @@ jobs:
     # Set-up R
     - name: Install packages
       run: |
-        R -e 'install.packages("tidyverse")'
-        R -e 'install.packages("janitor")'
-        R -e 'install.packages("rvest")'
+        R -e 'install.packages("jsonlite")'
     # Run R script
     - name: Scrape
       run: Rscript get_water_quality.R
@@ -37,6 +35,7 @@ jobs:
         git config --local user.name Otoliths
         git config --local user.email "ly_ding@126.com"
         git add water_quality_data/*
+        git add hydrological_data/*
         git commit -am "GH ACTION Headlines $(date)"
         git push origin main
       env:
