--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
     # Set-up R
     - name: Install packages
       run: |
-        R -e 'install.packages("jsonlite")'
+        R -e 'install.packages("jsonify")'
         R -e 'install.packages("curl")'
         
     # Run R script
