--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,11 @@
 # This is a basic workflow to help you get started with Actions
 
-name: water
+name: get_water_quality
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
+  schedule:
+    - cron:  '0 */4 * * *'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
