--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,8 @@ jobs:
 
     # Load repo and install R
     steps:
-    - uses: actions/checkout@master
+   # - uses: actions/checkout@master
+    - uses: actions/checkout@v3
    # - uses: r-lib/actions/setup-r@master
     - uses: r-lib/actions/setup-r@v2
 
