--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,9 +23,9 @@ jobs:
     - uses: r-lib/actions/setup-r@v2
 
     # Set-up R
-    - name: Install packages
-      run: |
-        R -e 'install.packages("jsonify")'
+    #- name: Install packages
+    #  run: |
+    #    R -e 'install.packages("jsonify")'
         
     # Run R script
     - name: Scrape
