--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,13 @@ name: get_water_quality
 
 # Controls when the workflow will run
 on:
-  schedule:
-    - cron:  '0 */3 * * *'
+# Triggers the workflow on push or pull request events but only for the "main" branch
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+#  schedule:
+#    - cron:  '0 */3 * * *'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
